# ed25519-gen-speed-test

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
